--- a/contact.html
+++ b/contact.html
@@ -68,3 +68,8 @@
         </div>  
     </div>         
 </div>
+<footer>
+    <span><strong>© 2021 Lviv</strong></span>
+</footer>
+</body>
+</html>
